--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.18.0",
+    "node-html-parser": "^6.1.12",
     "nuxt": "^3.10.3",
+    "open-graph-scraper": "^6.5.0",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@nuxt-themes/alpine": "^1.6.6",
     "@nuxt/content": "^2.12.0",
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "@unocss/nuxt": "^0.58.6",
+    "@unocss/preset-uno": "^0.58.6",
+    "@unocss/preset-web-fonts": "^0.58.6",
     "nuxt-icon": "^0.6.9",
     "nuxt-og-image": "^3.0.0-rc.42"
   }
