--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.18.0",
+    "@nuxt/ui": "^2.15.0",
     "node-html-parser": "^6.1.12",
     "nuxt": "^3.10.3",
     "open-graph-scraper": "^6.5.0",
     "vue": "^3.4.19",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@nuxt-themes/alpine": "^1.6.6",
