--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,6 @@
     "allowJs": true,
     "checkJs": false,
     "noImplicitAny": false
-  }
+  },
+  "include": ["env.d.ts", ".nuxt/nuxt.d.ts", "**/*"]
 }
