--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.18.0",
     "@nuxt/ui": "^2.15.0",
+    "@prisma/client": "^5.13.0",
     "node-fetch": "^3.3.2",
     "node-html-parser": "^6.1.12",
     "open-graph-scraper": "^6.5.0",
+    "prisma": "^5.13.0",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0",
     "zod": "^3.22.4"
